# tumorcode

./: .gitignore  CMakeLists.txt  Problems.txt  README.md  README.txt  tumorcode_configs.h
cmake/: PostInstall.cmake
cmake/modules/: FindCImg.cmake  FindNumpy.cmake  FindTBB.cmake  LibFindMacros.cmake
doc/: Doxyfile  install.txt  main.txt
externalProjects/ANN/: CMakeLists.txt.in
externalProjects/HDF5-cpp-wrapper/: CMakeLists.txt.in
externalProjects/numpycpp/: CMakeLists.txt.in
install_helpers/: Dockerfile  do-configure-trieste.sh  do-configure-trilinos-ubuntu16.sh  do-configure-tumorcode-ubuntu16.sh  do-configure-tumorcode-ubuntu16_none_MPI.sh  do-configure-tumorcode-ubuntu18.sh
minitests/: biconnected_components.cpp  eigentest.cpp  helloworld.cpp  test_auto_diff.cpp  testany.cpp  testargs.cpp  testcrazcontainer.cpp  testh5extlinks.py  testmist.cpp
minitests/boostpython/: CMakeLists.txt  hello.cpp
minitests/chombotest/: CMakeLists.txt  chombotest.kdev4  main.cpp  testMultiGrid.cpp
minitests/chombotest/.kdev4/: chombotest.kdev4
minitests/openmptest/: CMakeLists.txt  main-v1.cpp  main-v2.cpp  main-v3.cpp  main.cpp  openmptest.kdev4
minitests/openmptest/.kdev4/: openmptest.kdev4
py/: .spyderproject  create_movie.py  curvature.py  dicttoinfo.py  extensions.py  h5files.py  h5print.py  h5rm.py  h5setattr.py  identifycluster.py  mkstemp.py  mpl_utils.py  mystruct.py  myutils.py  povray.py  pso.py  qsub.py  qsub_a_little_test.py  slurm_a_little_test.py  system_tests.py  vec.py
py/cells/: make_paraview_movie.py  mayavi_cells.py  povray_cells.py  vtkVesselViz_from_hdf.py
py/krebs/: .gitignore  __init__.py  addhematocrit.py  analyzeBloodFlow.py  analyzeBloodFlowResistance.py  analyzeBloodPressureMvdCorrelation.py  analyzeBloodVolume.py  analyzeBloodVolumeSimple.py  analyzeGeneral.py  analyzeIFF.py  analyzeMurray.py  analyzeTissueOxygen.py  analyzeVesselTumor.py  analyzeVesselsBulkTumor.py  analyzeVesselsFakeTumor.py  analyzeVesselsRadial.py  analyzeVesselsVsCompartment.py  analyzeVesselsVsCompartment2.py  extractAllVtkFields.py  extractVtkFields.py  fractaldim.py  hdf2nifti.py  hdf2vkt_cells.py  hdf2vtk.py  hdf2vtk_cells.py  hdftumor2vtk.py  hdfvessels2vtk.py  hdfvessels2vtk_simple.py  (+34 more)
spack/: package.py
src/: CMakeLists.txt  tumorcode_build_info.h.in
src/adaption/: CMakeLists.txt  adaption_as_pagmo_problem.cpp  adaption_as_pagmo_problem.h  adaption_model2.cpp  adaption_model2.h  python-adaption.cpp  run_pagmo.cpp
src/common/: CMakeLists.txt  bulktissuemodel1_new.cpp  bulktissuemodel1_new.h  calcflow.cpp  calcflow.h  calcflow_common.cpp  calcflow_common.h  calcflow_linsys.cpp  calcflow_linsys.h  calcflow_optnet.h  cell_based_oxygen_update_model.cpp  cell_based_oxygen_update_model.h  common.cpp  common.h  continuum-flow.cpp  continuum-flow.h  continuum-grid.cpp  continuum-grid.h  continuum-stepper-states.h  continuum-surfacetension.cpp  continuum-surfacetension.h  continuum-utils.cpp  continuum-utils.h  convection_diffusion_solver.cpp  convection_diffusion_solver.h  distancemap.cpp  distancemap.h  glucose_model.cpp  glucose_model.h  growthfactor_model.cpp  growthfactor_model.h  hdfio.cpp  hdfio.h  lattice-data-polymorphic.cpp  lattice-data-polymorphic.h  levelset.cpp  levelset.h  lookup3dquad.h  multigrid.h  oxygen_model.cpp  (+18 more)
src/common/vesselgen/: remodeler.cpp  remodeler.h  vesselgen.h  vesselgen_grid.cpp  vessgen.cpp  vessgen_support.cpp  vessgen_support.h
src/detailedO2/: CMakeLists.txt  oxygen_model2.cpp  oxygen_model2.h  python-oxygen2.cpp
src/iff/: CMakeLists.txt  calc-ifdrug.cpp  calc-ifdrug.h  calc-ifflow.cpp  calc-ifflow.h  iff_drug_app.cpp  iff_drug_app.h  python-iff2.cpp
src/mwlib/: CImg.h  CMakeLists.txt  any_tree.cpp  any_tree.h  compressed_row_undirected_graph.h  drawing.cpp  drawing.h  dynamicarray.h  field.cpp  field.h  field_impl.h  hdf_wrapper.cpp  hdf_wrapper_array3d.cpp  hdf_wrapper_array3d.h  hdf_wrapper_dealii.h  hdf_wrapper_ptree.cpp  hdf_wrapper_ptree.h  hdf_wrapper_vec.h  helpers-containers.h  helpers-defs.h  helpers-mem.h  helpers-sys.h  helpers-vec.h  helpers.cpp  helpers.h  histogram.cpp  histogram.h  kdtree.h  lattice-data.cpp  lattice-data.h  listgraph.h  log.h  lookup_grid.h  math_ext.h  mempool.cpp  mempool.h  myAssert.h  operators.h  ptree_ext.cpp  ptree_ext.h  (+7 more)
src/mwlib_tests/: CMakeLists.txt  test_array.cpp  test_hdf.cpp  test_lookup_grid.cpp
src/python_krebsutils/: .gitignore  CMakeLists.txt  FindNumpyPath.py  mainboost.cpp  povray_export.cpp  pylatticedata.cpp  pylatticedata.h  python-helpers.cpp  python-helpers.h  python_calcflow.cpp  python_elliptic_solver_test.cpp  python_helpers.cpp  python_helpers.h  python_interpolate_between_vessels.cpp  python_murray.cpp  python_numericaltools_tests.cpp  python_tumormodel_tests.cpp  python_vesselgen.cpp  samplevessels.cpp
src/tests/: CMakeLists.txt  run_pagmo.cpp  test_ann.cpp  test_boost_numpy.cpp  test_boost_serialize.cpp  test_cahnhilliard.cpp  test_convection1.cpp  test_convection_diffusion.cpp  test_elliptic_solver.cpp  test_hdf5_cpp.cpp  test_level_set.cpp  test_pagmo.cpp  test_pagmo_serialize.cpp  test_stepper.cpp  tests.cpp
src/tests/H5/: CMakeLists.txt  py_h5_tumorcode_io.cpp  testH5Cpp.cpp  testH5Cpp_read.cpp  test_cluster_stackoverflow.cpp  test_py_h5_io.py  test_tumorcode_hdfio.cpp  test_tumorcode_hdfio.h
src/tests/boost_graph_library/: CMakeLists.txt  dijkstra_shortest_paths.cpp  weighted_graph.gr
src/tests/intel/: CMakeLists.txt  test_intel_compiler.cpp  test_numerical_limits.cpp
src/tests/trilinos/: CMakeLists.txt  IfpackBelos2.cpp  PrecBiCGStabExFile.cpp  hello_mpi.cpp  mpi_epetra.cpp  test_belos.cpp
src/tumors/: CMakeLists.txt  bulktissue-no-vessels.cpp  bulktissue-no-vessels.h  bulktissue-with-vessels.cpp  bulktissue-with-vessels.h  faketum.cpp  faketum.h  faketum_mts.cpp  faketum_mts.h  preziosi-no-vessels.cpp  python-tumors.cpp  python_tumors.cpp
utils/: CMakeLists.txt  bash_wrapper.sh  copy_old_o2_to_new.sh  crop_latest.sh  simple_slurm.sh  tumorcode_to_milotti_wrapper.cpp  valgrind_python2_wrapper
utils/memory/: buggy_program.cpp
(+107 files in other folders)
